<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_addSiteDefect"
            android:icon="@drawable/ic_baseline_add"
            android:title="@string/menu_addSiteDefect" />

        <item
            android:id="@+id/nav_listSiteDefects"
            android:icon="@drawable/ic_baseline_list"
            android:title="@string/menu_listSiteDefects" />

        <item
            android:id="@+id/searchActivity"
            android:icon="@drawable/ic_baseline_search"
            android:title="@string/find_station" />
    </group>
</menu>